--- a/src/assets/scss/main-style.scss
+++ b/src/assets/scss/main-style.scss
@@ -1,5 +1,5 @@
 @import './base/import-base.scss';
 @import './partials/import-partials.scss';
-@import './views/import-views.scss';
+@import './view/import-view.scss';
 @import './utils/import-utils.scss';
 @import './responsive/import-responsive.scss'
