--- a/src/assets/scss/utils/_utility.scss
+++ b/src/assets/scss/utils/_utility.scss
@@ -1,5 +1,5 @@
 .v-lazy-image {
-  filter: blur(5px);
+  filter: blur(3px);
   transition: filter 1s;
   will-change: filter;
 }
@@ -7,3 +7,11 @@
 .v-lazy-image-loaded {
   filter: blur(0);
 }
+
+.router-link-exact-active {
+  color: $navy-blue !important;
+}
+
+// .sidebar--width {
+//   margin-left: auto;  
+// }
