--- a/src/assets/scss/partials/_search-movies.scss
+++ b/src/assets/scss/partials/_search-movies.scss
@@ -1,29 +1,56 @@
 .search__movies__wrapper {
-  margin-top: 10px;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  display: flex;
+  flex: 0 0 400px;
+  position: relative;
+  transition: border .3s ease;
+
+  &:hover {
+    border: 1px solid rgba($black, 0.2);
+  }
+
   input {
-    height: 50px;
-    border-radius: 4px;
     background-color: $grey;
+    border-radius: 4px;
+    height: 50px;
+    padding-left: 12px;
     transition: all .3s ease-in-out;
     width: 100%;
-    padding-left: 12px;
   }
+
   .search__movies__wrapper__list {
-    margin: 10px 0;
+    background-color: $grey;
+    box-shadow: 0 3px 3px -3px rgba($black, 0.4);
     max-height: 300px;
     overflow-y: auto;
+    position: absolute;
+    top: 56px;
+    width: 100%;
+    z-index: 2;
+
+    & > p {
+      padding: 10px;
+      margin: 0;
+    }
 
     .search__movies__wrapper__item {
-      margin: 10px 0;
-      display: flex;
       align-items: center;
-      flex: 0 0 40%;
-      max-width: 40%;
       cursor: pointer;
-      img {
-        width: 75px;
-        height: 75px;
+      display: flex;
+      margin: 10px 0;
+      padding: 20px;
+      transition: box-shadow .3s ease-in-out;
+
+      &:hover {
+        box-shadow: 0 4px 2px -2px rgba($black, 0.2);
       }
+
+      img {
+        height: 75px;
+        width: 75px;
+      }
+
       span {
         margin-left: 15px;
       }
