--- a/src/assets/scss/partials/_sidebar.scss
+++ b/src/assets/scss/partials/_sidebar.scss
@@ -1,61 +1,80 @@
 .sidebar__wrapper {
+  align-items: center;
   background-color: $grey;
-  box-shadow: 10px 0 5px -2px $grey;
+  box-shadow: 0 4px 2px -2px rgba($black, 0.2);
   display: flex;
-  left: 0;
+  justify-content: center;
+  padding: 5px 0;
   position: fixed;
-  top: 0;
-  z-index: 1;
+  width: calc(100% - 17px);
+  z-index: 10;
 
-  .sidebar__item {
-    align-items: center;
-    display: block;
-    display: flex;
-    padding: 10px;
-    position: relative;
+  i {
+    align-self: center;
+  }
 
-    &:before {
-      content: '';
-      background-color: transparent;
-      display: inline-block;
-      height: 50%;
-      left: 0;
-      position: absolute;
-      transition: background-color 0.2s linear;
-      width: 5px;
-    }
+  nav {
+    flex: 0 0 300px;
 
-    &.router-link-exact-active {
-      &:hover {
+    .sidebar__wrapper__links {
+      display: flex;
+
+      .sidebar__item {
+        align-items: center;
+        display: flex;
+        padding: 10px;
+        position: relative;
+
+        &:last-of-type {
+          margin-left: 20px;
+        }
+
         &:before {
-           background-color: $navy-blue !important;
+          content: '';
+          background-color: transparent;
+          display: inline-block;
+          height: 50%;
+          left: 0;
+          position: absolute;
+          transition: background-color 0.2s linear;
+          width: 5px;
+        }
+
+        &.router-link-exact-active {
+          &:hover {
+            &:before {
+              background-color: $navy-blue !important;
+            }
+          }
+
+          &:before {
+            content: '';
+            background-color: $navy-blue;
+            display: inline-block;
+            height: 50%;
+            left: 0;
+            position: absolute;
+            width: 5px;
+          }
+        }
+
+        &:hover {
+          &:before {
+            content: '';
+            background-color: rgba($black, 0.7);
+            display: inline-block;
+            height: 50%;
+            left: 0;
+            position: absolute;
+            width: 5px;
+          }
+        }
+
+        span {
+          margin-left: 7.5px;
+          align-self: flex-end;
         }
       }
-      &:before {
-        content: '';
-        background-color: $navy-blue;
-        display: inline-block;
-        height: 50%;
-        position: absolute;
-        width: 5px;
-        left: 0;
-      }
-    }
-
-    &:hover {
-      &:before {
-        content: '';
-        background-color: rgba($black, 0.7);
-        display: inline-block;
-        height: 50%;
-        position: absolute;
-        width: 5px;
-        left: 0;
-      }
-    }
-
-    span {
-      margin-left: 7.5px;
     }
   }
 }
