--- a/src/assets/scss/utils/_utility.scss
+++ b/src/assets/scss/utils/_utility.scss
@@ -12,6 +12,19 @@
   color: $navy-blue !important;
 }
 
-// .sidebar--width {
-//   margin-left: auto;  
-// }
+.pt-header {
+  padding-top: 52px;
+}
+
+.card-shadow {
+  box-shadow: 0 2px 8px rgba($black, 0.1);
+}
+
+// Router view transition between pages
+.fade-in-enter-active, .fade-in-leave-active {
+  transition: opacity .5s
+}
+
+.fade-in-enter, .fade-in-leave-to  {
+  opacity: 0
+}
