--- a/src/assets/scss/responsive/_mobile.scss
+++ b/src/assets/scss/responsive/_mobile.scss
@@ -2,6 +2,7 @@
   .pt-header {
     padding-top: 110px;
   }
+
   .sidebar__wrapper {
     flex-flow: column wrap;
     width: 100%;
@@ -10,6 +11,38 @@
     }
     .search__movies__wrapper {
       width: 90%;
+    }
+  }
+
+  .movies__cards {
+    .movies__cards__item {
+      display: block;
+      padding: 0 0 40px;
+  
+      .movies__cards__item__image {
+        text-align: center;
+      }
+  
+      .movies__cards__item__placeholder {
+        height: auto;
+      }
+
+      .movies__cards__item__functionality {
+        
+      }
+    }
+  }
+
+  .video__player--modal {
+    &.video__player--modal-show {
+      width: 95%;
+      text-align: center;
+      height: 250px;
+
+      iframe {
+        width: inherit;
+        height: inherit;
+      }
     }
   }
 }
