--- a/src/assets/scss/partials/_video-player.scss
+++ b/src/assets/scss/partials/_video-player.scss
@@ -1,20 +1,43 @@
-.video__player--modal {
+.video__player--backdrop {
+  background-color: rgba($black, 0.3);
+  height: 100%;
   opacity: 0;
-  visibility: hidden;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 10;
+  position: static;
+  right: 0;
+  top: 0;
   transition: opacity .3s ease;
+  visibility: hidden;
+  width: 100%;
+  z-index: 15;
 
-  &.video__player--modal-show {
+  &.video__player--backdrop-show {
     opacity: 1;
     visibility: visible;
+    position: fixed;
+    overflow-y: auto;
+  }
 
-    iframe {
-      width: 640px;
-      height: 360px;
+  .video__player--modal {
+    background-color: $white;
+    border-radius: 5px;
+    left: 50%;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    transition: opacity .3s ease;
+    visibility: hidden;
+    z-index: 16;
+    padding: 25px 0 0;
+
+    &.video__player--modal-show {
+      opacity: 1;
+      visibility: visible;
+
+      iframe {
+        width: 640px;
+        height: 360px;
+      }
     }
   }
 }
