--- a/src/assets/scss/utils/_cards.scss
+++ b/src/assets/scss/utils/_cards.scss
@@ -68,6 +68,29 @@
           display: flex;
           align-items: center;
           cursor: pointer;
+          transition: color .3s ease-in-out;
+          &:hover:not(:first-child) {
+            color: rgba($navy-blue, 0.7);
+          }
+
+          &:first-child {
+            &:hover {
+              color: $redFav;
+            }
+          }
+
+          & > a {
+            transition: color .3s ease-in-out;
+            &:hover {
+              color: rgba($navy-blue, 0.7);
+            }
+          }
+
+          &.movies__cards__item__functionality__remove {
+            &:hover {
+              color: $red;
+            }
+          }
 
           i {
             margin-left: 10px;
